syntax = "proto3";
package ru.meetup.grpc.dto.service.accounts;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

import "ru/meetup/grpc/dto/commons.proto";
import "ru/meetup/grpc/dto/user_id.proto";
import "ru/meetup/grpc/dto/accounts.proto";

service AccountService {
    rpc getAccounts (GetAccountsRequest) returns (GetAccountsResponse);
}

message GetAccountsRequest {
    UserId userId = 1;
}

message GetAccountsResponse {
    repeated ru.meetup.grpc.dto.Account accounts = 1;
}
